manifests/integrated-tools/authentik/manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
    spec:
      containers:
      - name: server
        image: ghcr.io/goauthentik/server:latest
        args: ["server"]
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
        - name: media-tmp
          mountPath: /media
        - name: certs
          mountPath: /certs
        - name: templates
          mountPath: /templates
        startupProbe:
          httpGet:
            path: /-/health/live/
            port: http
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /-/health/live/
            port: http
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /-/health/ready/
            port: http
            scheme: HTTP
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          # requests:
          #   cpu: 150m
          #   memory: 512Mi
          limits:
            cpu: 150m
            memory: 1024Mi
      volumes:
      - name: media-tmp
        emptyDir: {}
      - name: certs
        configMap:
          name: authentik-certs
      - name: templates
        configMap:
          name: authentik-templates
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/goauthentik/server:latest
        args: ["worker"]
        startupProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          # requests:
          #   cpu: 150m
          #   memory: 512Mi
          limits:
            cpu: 150m
            memory: 1024Mi
        volumeMounts:
        - name: media-tmp
          mountPath: /media
        - name: certs
          mountPath: /certs
        - name: templates
          mountPath: /templates
      volumes:
      - name: media-tmp
        emptyDir: {}
      - name: certs
        configMap:
          name: authentik-certs
      - name: templates
        configMap:
          name: authentik-templates
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
spec:
  selector:
    app: authentik-server
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
spec:
  ingressClassName: nginx
  rules:
    - host: authentik.192.168.100.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 9000
